# 8-direction-pixel-character-generate

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/test/: .flow.ui.oo.json  flow.oo.yaml
flows/test/scriptlets/: +scriptlet#1.py
oo-locales/: en.json  zh-CN.json
scriptlets/: +scriptlet#1.py  +scriptlet#2.py
slotflows/+slotflow#1/: .slotflow.ui.oo.json  slotflow.oo.yaml
subflows/8-direction-pixel-character-generate/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/8-direction-pixel-character-generate/scriptlets/: +scriptlet#1.py  +scriptlet#2.py
subflows/pixel-sprite-generator-wrapper/scriptlets/: path_handler.py
subflows/pixel-sprite-generator/scriptlets/: prompt_builder.py  url_converter.py
